--- a/src/pages/marketplace/marketplace.html
+++ b/src/pages/marketplace/marketplace.html
@@ -23,7 +23,7 @@
 
     <ion-card-content style="background-color: #ffccf3" >
       <div class="item">
-        <b float-left class="card-top">item A</b>
+        <b float-left class="card-top">Heart</b>
         <b float-right class="card-top">5,000 THB</b>
       </div>
     </ion-card-content>
@@ -36,37 +36,12 @@
 
     <ion-card-content style="background-color: #ffccf3">
       <div class="item">
-        <b float-left class="card-top">item B</b>
+        <b float-left class="card-top">Club</b>
         <b float-right class="card-top">1,000 THB</b>
       </div>
     </ion-card-content>
   </ion-card>
 
-  <ion-card (click)="ConfirmBuy2()">
-    <ion-list-header style="background-color: lightcoral  ">
-        03/08/2018
-    </ion-list-header>
-
-    <ion-card-content style="background-color: #ffccf3">
-      <div class="item" >
-        <b float-left class="card-top">item C</b>
-        <b float-right class="card-top">15,000 THB</b>
-      </div>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card (click)="ConfirmBuy3()" > 
-    <ion-list-header style="background-color: lightcoral  ">
-        03/08/2018
-    </ion-list-header>
-
-    <ion-card-content style="background-color: #ffccf3">
-      <div class="item">
-        <b float-left class="card-top">item D</b>
-        <b float-right class="card-top">20,000 THB</b>
-      </div>
-    </ion-card-content>
-  </ion-card>
-
+  
 
 </ion-content>
