--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -19,359 +19,16 @@
   <button ion-button style="margin-top: 20px;margin-bottom: 20px;" align='center' (click)="his()" color="pink">Trade History</button>
   <ion-title>Poker Collection</ion-title>
   <ion-grid text-center>
-    <ion-row id="1">
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 160.png" style="height: 50px;" />
+    <ion-row>
+      <ion-col *ngFor="let collection of user.collection; let i=index "class="b" (click)="detail(i)">
+        <img src="{{collection.src}}" style="height: 50px;" [ngClass]="{alpha:collection.amount==0}"/>
         <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 186.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 173.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 147.png" style="height: 50px;" />
-        <div text-right>
-          x0
+          x{{collection.amount}}
         </div>
       </ion-col>
     </ion-row>
 
-    <ion-row id="2">
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 161.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 187.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 174.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 148.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="3">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 162.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 188.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 175.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 149.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="4">
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 163.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 189.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 176.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 150.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="5">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 164.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 190.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 177.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 151.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="6">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 165.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 191.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 178.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 152.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="7">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 166.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 192.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 179.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 153.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="8">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 167.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 193.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 180.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 154.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="9">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 168.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 194.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 181.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 155.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="10">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 169.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 195.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 182.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 156.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="11">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 170.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 196.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 183.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 157.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="12">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 171.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 197.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 184.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 158.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row id="13">
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 172.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b">
-        <img class="alpha" src="../../assets/imgs/Asset 185.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-      <ion-col class="b" (click)="detail()">
-        <img src="../../assets/imgs/Asset 198.png" style="height: 50px;" />
-        <div text-right>
-          x1
-        </div>
-      </ion-col>
-      <ion-col class="b" >
-        <img class="alpha" src="../../assets/imgs/Asset 159.png" style="height: 50px;" />
-        <div text-right>
-          x0
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-  <ion-title style="margin-top: 20px;">Slot Collection</ion-title>
+ <ion-title style="margin-top: 20px;">Slot Collection</ion-title>
   <ion-grid>
     <ion-row id="01">
       <ion-col class="b" >
@@ -456,7 +113,6 @@
         </div>
       </ion-col>
     </ion-row>
-
     <ion-row id="05">
       <ion-col class="b" >
         <img class="alpha" src="../../assets/imgs/Asset 212.png" style="height: 50px;" />
