--- a/src/pages/pre-play-slot/pre-play-slot.html
+++ b/src/pages/pre-play-slot/pre-play-slot.html
@@ -39,7 +39,7 @@
       <ion-grid>
         <ion-row>
           <ion-col col-12 class="ticket-title">
-            Ticket
+            Ticket {{ticket.no}}
           </ion-col>
         </ion-row>
         <ion-row>
