--- a/src/pages/detailcollection/detailcollection.html
+++ b/src/pages/detailcollection/detailcollection.html
@@ -20,9 +20,9 @@
     <ion-row>
       <ion-col col-3></ion-col>
       <ion-col col-6 class="b" style="border: solid 1px">
-        <img src="../../assets/imgs/Asset 198.png" style="height: 120px;" />
+        <img src="{{user.collection[index].src}}" style="height: 120px;" />
         <div text-right>
-          x1
+          x{{user.collection[index].amount}}
         </div>
       </ion-col>
       <ion-col col-3></ion-col>
