--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -23,6 +23,263 @@
       </ion-segment-button>
     </ion-segment>
 
+  <div [ngSwitch]="Trade">
+    <ion-list *ngSwitchCase="'buy'" ngSelected="selected">
+      <ion-grid>
+        <ion-row style="padding-top: 10px"></ion-row>
+        <ion-row padding style="background-color: lightgrey;height: 120px">
+          <ion-col col-12>
+            Buy amount
+          </ion-col>
+          <ion-col col-10>
+            <ion-list>
+              <ion-item>
+                <ion-input type="text" value=""></ion-input>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+          <ion-col col-2 style="padding-top: 30px">
+            Coin
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-grid padding>
+        <ion-row>
+          <ion-col col-12 style="text-align: center">
+            <h4>History (buy)</h4>
+          </ion-col>
+        </ion-row>
+        <ion-list>
+          <ion-item no-padding>
+            <ion-row style="font-size: 10px">
+              <ion-col col-12>
+                DD/MM/YY
+              </ion-col>
+              <ion-col col-4>
+                Amount
+              </ion-col>
+              <ion-col col-4>
+                Prize/Unit
+              </ion-col>
+              <ion-col col-4>
+                Total prize
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>100 coin</b>
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>100 BTH</b>
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>10,000 BTH</b>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item no-padding>
+            <ion-row style="font-size: 10px">
+              <ion-col col-12>
+                DD/MM/YY
+              </ion-col>
+              <ion-col col-4>
+                Amount
+              </ion-col>
+              <ion-col col-4>
+                Prize/Unit
+              </ion-col>
+              <ion-col col-4>
+                Total prize
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>100 coin</b>
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>100 BTH</b>
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>10,000 BTH</b>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item no-padding>
+            <ion-row style="font-size: 10px">
+              <ion-col col-12>
+                DD/MM/YY
+              </ion-col>
+              <ion-col col-4>
+                Amount
+              </ion-col>
+              <ion-col col-4>
+                Prize/Unit
+              </ion-col>
+              <ion-col col-4>
+                Total prize
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>100 coin</b>
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>100 BTH</b>
+              </ion-col>
+              <ion-col col-4 style="font-size: 14px">
+                <b>10,000 BTH</b>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+        </ion-list>
+      </ion-grid>
+
+      <ion-grid class="page-footer" no-padding>
+        <ion-row>
+          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
+            <button ion-button clear block style="color : white">
+              <b>Confirm</b>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+    </ion-list>
+
+
+    <ion-list *ngSwitchCase="'sell'">
+      <ion-grid>
+        <ion-row style="padding-top: 10px"></ion-row>
+        <ion-row style="background-color: lightgrey;height: 90px">
+          <ion-col col-12>
+            Sell amount
+          </ion-col>
+          <ion-col col-10>
+            <ion-list>
+              <ion-item>
+                <ion-input type="text" value=""></ion-input>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+          <ion-col col-2 style="padding-top: 30px">
+            Coin
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <ion-grid>
+        <ion-row style="padding-top: 0px"></ion-row>
+        <ion-row style="background-color: lightgrey;height: 90px">
+          <ion-col col-12>
+            Prise / Unit
+          </ion-col>
+          <ion-col col-10>
+            <ion-list>
+              <ion-item>
+                <ion-input type="text" value=""></ion-input>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+          <ion-col col-2 style="padding-top: 30px">
+            THB
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <ion-grid padding>
+        <ion-row>
+          <ion-col col-12 style="text-align: center">
+            <h4>List (Sell)</h4>
+          </ion-col>
+        </ion-row>
+        <ion-list>
+
+          <ion-item no-padding>
+            <ion-row style="font-size: 10px">
+              <ion-col col-12>
+                DD/MM/YY
+              </ion-col>
+              <ion-col col-3>
+                Amount
+              </ion-col>
+              <ion-col col-3>
+                Prize/Unit
+              </ion-col>
+              <ion-col col-3>
+                Sell (Unit)
+              </ion-col>
+              <ion-col col-3>
+                Total sell
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>100 coin</b>
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>100 BTH</b>
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>90 coin</b>
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>9,000 BTH</b>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+
+          <ion-item no-padding>
+            <ion-row style="font-size: 10px">
+              <ion-col col-12>
+                DD/MM/YY
+              </ion-col>
+              <ion-col col-3>
+                Amount
+              </ion-col>
+              <ion-col col-3>
+                Prize/Unit
+              </ion-col>
+              <ion-col col-3>
+                Sell (Unit)
+              </ion-col>
+              <ion-col col-3>
+                Total sell
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>100 coin</b>
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>100 BTH</b>
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>90 coin</b>
+              </ion-col>
+              <ion-col col-3 style="font-size: 14px">
+                <b>9,000 BTH</b>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+
+
+        </ion-list>
+      </ion-grid>
+
+      <ion-grid class="page-footer" no-padding>
+        <ion-row>
+          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirmSell()">
+            <button ion-button color="dark" clear block style="color: white">
+              <B>Confirm</B>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-list>
+  </div>
+
+</ion-content>
+=======
+    <div>
+      <ion-segment [(ngModel)]="Trade" >
+        <ion-segment-button value="buy">
+          Buy
+        </ion-segment-button>
+        <ion-segment-button value="sell">
+          Sell
+        </ion-segment-button>
+      </ion-segment>
+  
     <div [ngSwitch]="Trade">
       <ion-list *ngSwitchCase="'buy'" ngSelected="selected">
         <ion-grid>
@@ -44,7 +301,7 @@
           </ion-row>
         </ion-grid>
         <ion-grid padding>
-          <ion-row>
+          <ion-row >
             <ion-col col-12 style="text-align: center">
               <h4>History (buy)</h4>
             </ion-col>
@@ -61,7 +318,7 @@
             <ion-item *ngFor="let buy of user.buyHistory" no-padding>
               <ion-row style="font-size: 10px">
                 <ion-col col-12>
-                  DD/MM/YY
+                  {{buy.date}}
                 </ion-col>
                 <ion-col col-4>
                   Amount
@@ -73,13 +330,13 @@
                   Total prize
                 </ion-col>
                 <ion-col col-4 style="font-size: 14px">
-                  <b>100 coin</b>
+                  <b> {{buy.coin}} coin</b>
                 </ion-col>
                 <ion-col col-4 style="font-size: 14px">
                   <b>100 BTH</b>
                 </ion-col>
                 <ion-col col-4 style="font-size: 14px">
-                  <b>10,000 BTH</b>
+                  <b>{{buy.amount}} BTH</b>
                 </ion-col>
               </ion-row>
             </ion-item>
@@ -109,7 +366,7 @@
             <ion-col col-10>
               <ion-list>
                 <ion-item>
-                  <ion-input type="text" value=""></ion-input>
+                  <ion-input type="number" [(ngModel)]="sellAmount"></ion-input>
                 </ion-item>
               </ion-list>
             </ion-col>
@@ -128,7 +385,7 @@
             <ion-col col-10>
               <ion-list>
                 <ion-item>
-                  <ion-input type="text" value=""></ion-input>
+                  <ion-input type="number" [(ngModel)]="sellPrice"></ion-input>
                 </ion-item>
               </ion-list>
             </ion-col>
@@ -155,7 +412,7 @@
             <ion-item *ngFor="let sell of user.sellHistory" no-padding>
               <ion-row style="font-size: 10px">
                 <ion-col col-12>
-                  DD/MM/YY
+                  {{sell.date}}
                 </ion-col>
                 <ion-col col-3>
                   Amount
@@ -170,19 +427,21 @@
                   Total sell
                 </ion-col>
                 <ion-col col-3 style="font-size: 14px">
-                  <b>100 coin</b>
+                  <b>{{sell.coin}} coin</b>
                 </ion-col>
                 <ion-col col-3 style="font-size: 14px">
                   <b>100 BTH</b>
                 </ion-col>
                 <ion-col col-3 style="font-size: 14px">
-                  <b>90 coin</b>
+                  <b>{{sell.price}}</b>
                 </ion-col>
                 <ion-col col-3 style="font-size: 14px">
-                  <b>9,000 BTH</b>
+                  <b>{{sell.amount}} BTH</b>
                 </ion-col>
               </ion-row>
             </ion-item>
+  
+  
           </ion-list>
         </ion-grid>
 
@@ -200,3 +459,4 @@
   </div>
 
 </ion-content>
+
