--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -16,20 +16,8 @@
   <h2>Poker Scratch</h2>
   <ion-grid>
     <ion-row>
-      <ion-col class="b">
-        <img src="../../assets/imgs/Asset 159.png">
-      </ion-col>
-      <ion-col class="b">
-        <img src="../../assets/imgs/Asset 172.png">
-      </ion-col>
-      <ion-col class="b">
-        <img src="../../assets/imgs/Asset 198.png">
-      </ion-col>
-      <ion-col class="b">
-        <img src="../../assets/imgs/Asset 169.png">
-      </ion-col>
-      <ion-col class="b">
-        <img src="../../assets/imgs/Asset 195.png">
+      <ion-col>
+        <img src="{{user.collection[2].src}}">
       </ion-col>
     </ion-row>
   </ion-grid>
