--- a/src/pages/confmodal/confmodal.html
+++ b/src/pages/confmodal/confmodal.html
@@ -7,11 +7,10 @@
 <ion-content padding text-center>
   <ion-label>convert 100 ETH to</ion-label>
   <ion-item center text-center>
-    <ion-label>13,500,000</ion-label>
-    <ion-select [(ngModel)]="gender">
+    <ion-label>{{amount}}</ion-label>
+    <ion-select [(ngModel)]="gender"  (ionChange)="calAmount()">
       <ion-option value="thb">THB</ion-option>
-      <ion-option value="btc">BTC</ion-option>
-      <ion-option value="e">Eteraum</ion-option>
+      <ion-option value="usd">USD</ion-option>
     </ion-select>
   </ion-item>
   <button style="margin-top: 20px" ion-button color="secondary" (click)="go()">Done</button>
