--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -27,6 +27,7 @@
         </div>
       </ion-col>
     </ion-row>
+    </ion-grid>
 
  <ion-title style="margin-top: 20px;">Slot Collection</ion-title>
   <ion-grid>
