add modal coolect trade

--- a/src/pages/collection-trade/collection-trade.html
+++ b/src/pages/collection-trade/collection-trade.html
@@ -3,7 +3,7 @@
       <button ion-button clear small (click)="backpage()">
           <ion-icon name="arrow-back"></ion-icon>
         </button>
-    <ion-title>Trade</ion-title>
+    <ion-title>Collection Trade</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
@@ -46,7 +46,7 @@
 
       <ion-grid class="page-footer" no-padding>
         <ion-row>
-          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
+          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="openModal()">
             <button ion-button clear block style="color : white">
               <b>Confirm</b>
             </button>
