--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -16,7 +16,7 @@
   <div>
     <ion-segment [(ngModel)]="Trade">
       <ion-segment-button value="buy">
-        <h6>Buy</h6>
+        Buy
       </ion-segment-button>
       <ion-segment-button value="sell">
         Sell
