--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -20,19 +20,19 @@
   <ion-title>Poker Collection</ion-title>
   <ion-grid text-center>
     <ion-row>
-      <ion-col *ngFor="let collection of user.collection; let i=index "class="b" (click)="detail(i)">
-        <img src="{{collection.src}}" style="height: 50px;" [ngClass]="{alpha:collection.amount==0}"/>
+      <ion-col col-3 *ngFor="let collection of user.collection; let i=index " class="b" (click)="detail(i)">
+        <img src="{{collection.src}}" style="height: 40px; width: 40px;" [ngClass]="{alpha:collection.amount==0}" />
         <div text-right>
           x{{collection.amount}}
         </div>
       </ion-col>
     </ion-row>
-    </ion-grid>
+  </ion-grid>
 
- <ion-title style="margin-top: 20px;">Slot Collection</ion-title>
+  <ion-title style="margin-top: 20px;">Slot Collection</ion-title>
   <ion-grid>
     <ion-row id="01">
-      <ion-col class="b" >
+      <ion-col class="b">
         <img class="alpha" src="../../assets/imgs/Asset 199.png" style="height: 50px;" />
         <div text-right>
           x0
@@ -53,7 +53,7 @@
     </ion-row>
 
     <ion-row id="02">
-      <ion-col class="b" >
+      <ion-col class="b">
         <img class="alpha" src="../../assets/imgs/Asset 202.png" style="height: 50px;" />
         <div text-right>
           x0
@@ -95,7 +95,7 @@
     </ion-row>
 
     <ion-row id="04">
-      <ion-col class="b" >
+      <ion-col class="b">
         <img class="alpha" src="../../assets/imgs/Asset 209.png" style="height: 50px;" />
         <div text-right>
           x0
@@ -115,7 +115,7 @@
       </ion-col>
     </ion-row>
     <ion-row id="05">
-      <ion-col class="b" >
+      <ion-col class="b">
         <img class="alpha" src="../../assets/imgs/Asset 212.png" style="height: 50px;" />
         <div text-right>
           x0
