--- a/src/pages/trade-buy-modal/trade-buy-modal.html
+++ b/src/pages/trade-buy-modal/trade-buy-modal.html
@@ -5,16 +5,15 @@
 </ion-header>
 
 <ion-content padding text-center>
-  <ion-label>Buy 5 coin for</ion-label>
+  <ion-label>Buy {{num}} coin for</ion-label>
   <ion-item center text-center>
-    <ion-label>500</ion-label>
-    <ion-select [(ngModel)]="gender">
+    <ion-label>{{amount}}</ion-label>
+    <ion-select [(ngModel)]="gender" (ionChange)="calAmount()">
       <ion-option value="thb">THB</ion-option>
-      <ion-option value="btc">BTC</ion-option>
-      <ion-option value="e">ETH</ion-option>
-      <ion-option value="e">USD</ion-option>
+      <ion-option value="eth">ETH</ion-option>
+      <ion-option value="usd">USD</ion-option>
     </ion-select>
   </ion-item>
-  <button style="margin-top: 20px" ion-button color="secondary" (click)="go()">convert</button>
-  <button style="margin-top: 20px" ion-button color="danger" (click)="closeModal()">cancel</button>
+  <button style="margin-top: 20px" ion-button color="secondary" (click)="go()">Confirm</button>
+  <button style="margin-top: 20px" ion-button color="danger" (click)="closeModal()">Cancel</button>
 </ion-content>
